# holmes

./: .gitignore  .gitlab-ci.yml  404.html  CHANGELOG.md  DOC_PLAN.md  README.md  TODO.md  index.html  makefile  mkdocs.yml  objects.inv  plan.md  pyproject.toml  sitemap.xml  todo.md  v2_features.md
.github/workflows/: ci-holmes-rs.yml  ci-holmes.yml  docs.yml  publish.yml
api-reference/: index.html
api-reference/api/: index.html
api-reference/api/api/: index.html
api-reference/api/calibration/: index.html
api-reference/api/projection/: index.html
api-reference/api/simulation/: index.html
api-reference/api/utils/: index.html
api-reference/app/: index.html
api-reference/config/: index.html
api-reference/data/: index.html
api-reference/exceptions/: index.html
api-reference/logging/: index.html
api-reference/models/: index.html
api-reference/models/calibration/: index.html
api-reference/models/hydro/: index.html
api-reference/models/snow/: index.html
api-reference/models/utils/: index.html
api-reference/python/api/: index.html
api-reference/python/data/: index.html
api-reference/python/models/: index.html
api-reference/rust/: index.html
api-reference/utils/: index.html
api-reference/utils/paths/: index.html
api-reference/utils/print/: index.html
api-reference/utils/websocket/: index.html
api-reference/validation/: index.html
api-reference/websocket/: index.html
api-reference/websocket/calibration/: index.html
api-reference/websocket/projection/: index.html
api-reference/websocket/simulation/: index.html
concepts/: index.html
concepts/bucket/: index.html
concepts/calibration-algorithms/: index.html
concepts/cequeau/: index.html
concepts/gr4j/: index.html
concepts/metrics/: index.html
concepts/models/bucket/: index.html
concepts/models/cemaneige/: index.html
concepts/models/gr4j/: index.html
concepts/pet/: index.html
concepts/pet-models/: index.html
concepts/snow-models/: index.html
data/: Baskatong_Observations.csv  Leaf_Observations.csv
data-formats/: index.html
data-formats/cemaneige-info/: index.html
data-formats/exports/: index.html
data-formats/observations/: index.html
data-formats/projections/: index.html
developer-guide/: index.html
developer-guide/architecture/: index.html
developer-guide/backend/: index.html
developer-guide/backend/api-structure/: index.html
developer-guide/backend/data-loading/: index.html
developer-guide/backend/model-registry/: index.html
developer-guide/backend/websocket-protocol/: index.html
developer-guide/frontend/: index.html
developer-guide/frontend/charts/: index.html
developer-guide/frontend/mev-architecture/: index.html
developer-guide/frontend/pages/: index.html
developer-guide/rust-extension/: index.html
developer-guide/rust-extension/building/: index.html
developer-guide/rust-extension/implementing-models/: index.html
developer-guide/rust-extension/python-bindings/: index.html
developer-guide/testing/: index.html
docs/api-reference/rust/: index.md
docs/api-reference/websocket/: calibration.md  index.md  projection.md  simulation.md
docs/concepts/: bucket.md  pet.md  snow-models.md
docs/concepts/models/: cemaneige.md
docs/developer-guide/: architecture.md  index.md
docs/developer-guide/backend/: api-structure.md  data-loading.md  index.md  model-registry.md
docs/developer-guide/frontend/: charts.md  index.md  mev-architecture.md  pages.md
docs/developer-guide/rust-extension/: building.md  implementing-models.md  (+2 more)
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/user-guide/: calibration.md  index.md  interface-overview.md  projection.md  settings.md  simulation.md
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
reference/changelog/: index.html
reference/license/: index.html
scripts/: convert_projections_format.py
search/: search_index.json
src/: app.py  data.py  logging.py
src/api/: api.py  calibration.py  projection.py  simulation.py  utils.py
src/holmes/: app.py  data.py  logging.py
src/holmes-rs/: CHANGELOG.md  Cargo.toml  pyproject.toml
src/holmes-rs/.github/workflows/: ci.yml
src/holmes-rs/python/holmes_rs/: __init__.py  __init__.pyi
src/holmes-rs/python/holmes_rs/calibration/: sce.pyi
src/holmes-rs/src/: lib.rs  metrics.rs  utils.rs
src/holmes-rs/src/calibration/: mod.rs  sce.rs  utils.rs
src/holmes-rs/src/hydro/: bucket.rs  cequeau.rs  gr4j.rs  mod.rs  utils.rs
src/holmes-rs/src/pet/: mod.rs  oudin.rs  utils.rs
src/holmes-rs/src/snow/: cemaneige.rs  mod.rs  utils.rs
src/holmes-rs/tests/integration/: calibration_workflow.rs
src/holmes-rs/tests/python_integration/: test_calibration.py  test_hydro.py  test_metrics.py  test_pet.py  test_snow.py
src/holmes-rs/tests/unit/: metrics_tests.rs
src/holmes-rs/tests/unit/calibration/: sce_tests.rs  utils_tests.rs
src/holmes-rs/tests/unit/hydro/: bucket_tests.rs  cequeau_tests.rs  gr4j_tests.rs
src/holmes-rs/tests/unit/pet/: oudin_tests.rs
src/holmes-rs/tests/unit/snow/: cemaneige_tests.rs
src/hydro/: __init__.py  calibration.py  gr4j.py  hydro.py  models.py  oudin.py  projection.py  sce.py  simulation.py  snow.py  utils.py
src/static/: index.html
src/utils/: __init__.py  plotting.py
tests/: README.md  conftest.py
tests/e2e/: test_calibration.py  test_data_persistence.py  test_error_handling.py  test_projection.py  test_simulation.py
tests/fixtures/: __init__.py
tests/integration/: test_calibration_ws.py  test_catchments.py  test_frontend_integration.py  test_projection_ws.py  test_simulation_ws.py
tests/unit/: test_anti_fragility.py  test_app.py  test_config.py  test_data.py  test_data_projection.py  test_logging.py  test_main.py
user-guide/: index.html
user-guide/calibration/: index.html
user-guide/interface-overview/: index.html
user-guide/projection/: index.html
user-guide/settings/: index.html
user-guide/simulation/: index.html
(+70 files in other folders)
