[project]
name = "holmes"
version = "3.1.0"
description = "HOLMES (HydrOLogical Modeling Educationnal Software) is a software developped to teach operational hydrology. It is developed at the university Laval, Québec, Canada."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numba>=0.62.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.2",
    "starlette>=0.48.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.36.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["uv_build>=0.8.4"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "src"

[project.scripts]
holmes = "src.app:run_server"
h = "src.app:run_server"

[tool.black]
line_length = 79
target-version = ['py313']

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--cov",
    "--cov-report=term-missing",
]
qt_api = "pyqt6"
qt_default_raising = true
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "gui: GUI-related tests",
]
env = [
    "QT_QPA_PLATFORM=offscreen",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
]
