[package]
name = "holmes-rs"
version = "3.3.0"
edition = "2021"

[dependencies]
ndarray = "0.17.1"
ndarray-rand = "0.16.0"
numpy = "0.27"
pyo3 = { version = "0.27", features = ["extension-module"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.11.0"
thiserror = "2.0.17"

[lib]
name = "holmes_rs"
crate-type = ["cdylib", "rlib"]

[lints.rust]
non_upper_case_globals = "allow"

[profile.release]
  lto = true              # Link-Time Optimization
  codegen-units = 1       # Better optimization (slower compile)
  opt-level = 3           # Maximum optimization
